--- a/skeleton.html
+++ b/skeleton.html
@@ -51,6 +51,8 @@
 		crossorigin="anonymous"></script>
 
 	<script>
+		let button = document.querySelector("#add");
+
 		button.addEventListener("click", () => {
 			// 1. Read the text in #task-input.
 			let input = document.querySelector("#task-input");
