--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 			<div class="flex-grow-1 bg-light rounded-2 p-2 me-1 w-50">
 				<h3>Todos</h3>
 				<div id="todo-list">
+					<div class="task bg-light p-1 rounded-2 ps-2 d-flex align-items-center">
+					</div>
 				</div>
 			</div>
 			<div class="flex-grow-1 bg-light rounded-2 p-2 w-50">
@@ -45,17 +47,6 @@
 			</div>
 		</div>
 	</div>
-
-
-	<!-- <div class="task bg-light p-1 rounded-2 ps-2 d-flex align-items-center">
-						<span class="me-auto">Task text</span>
-						<button class="btn btn-sm btn-success me-1">
-							<i class="bi bi-check"></i>
-						</button>
-						<button class="btn btn-sm btn-danger">
-							<i class="bi bi-x"></i>
-						</button>
-					</div> -->
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
@@ -67,49 +58,21 @@
 			Done: 2,
 		};
 
-		let id = 1;
-		function getId() {
-			return id++;
-		}
-
 		let tasks = [];
-		/*
-		task: {
-			id: number,
-			text: string,
-			type: Type
-		}
-		*/
 
 		function loadTasks() {
 			let lastTasks = localStorage.getItem("tasks");
 			if (!lastTasks) return;
 
 			tasks = JSON.parse(lastTasks);
-			tasks.forEach(t => {
-				if (t.type === Type.Todo) addToList("#todo-list", t);
-				else if (t.type === Type.Done) addToList("#done-list", t);
-
-				id = t.id + 1;
-			})
+			tasks.forEach(addToList);
 		}
 
 		function saveTasks() {
 			localStorage.setItem("tasks", JSON.stringify(tasks));
 		}
 
-		/*
-			<div class="task bg-light p-1 rounded-2 ps-2 d-flex align-items-center">
-				<span class="me-auto">Task text</span>
-				<button class="btn btn-sm btn-successme-1">
-					<i class="bi bi-check"></i>
-				</button>
-				<button class="btn btn-sm btn-danger">
-					<i class="bi bi-x"></i>
-				</button>
-			</div>
-		*/
-		function addToList(target, task) {
+		function addToList(task) {
 			let div = document.createElement("div");
 			div.className = "task bg-light p-1 rounded-2 ps-2 d-flex align-items-center";
 
@@ -140,16 +103,15 @@
 				saveTasks();
 			});
 
-			let list = document.querySelector(target);
+			let list = document.querySelector(task.type === Type.Todo ? "#todo-list" : "#done-list");
 			list.appendChild(div);
 		}
-
-		let button = document.querySelector("#add");
 
 		window.addEventListener("load", () => {
 			loadTasks();
 		});
 
+		let button = document.querySelector("#add");
 		button.addEventListener("click", () => {
 			// 1. Read the text in #task-input.
 			let input = document.querySelector("#task-input");
@@ -159,7 +121,6 @@
 
 			// 2. Create a new Task object.
 			let task = {
-				id: getId(),
 				text: text,
 				type: Type.Todo
 			};
@@ -169,12 +130,11 @@
 			saveTasks();
 
 			// 4. Create a new task item and attach it to #todo-list.
-			addToList("#todo-list", task);
+			addToList(task);
 
 			// 5. Clear #task-input.
 			input.value = "";
 		});
-
 	</script>
 </body>
 
